Update Document Swagger: API Get list tests and Get list questions
